crates/glyph-cli/tests/corpus/valid/return_row2_named_with_type_decl.glyph
type Diagnosis = <"root cause and severity">

skill diagnose() -> Diagnosis
    description: "Diagnose an issue."
    flow:
        "Inspect the scope."
        return <diagnosis>
