crates/glyph-cli/tests/corpus/invalid/case-violation/value_pascal_case.glyph
const LinkMode = "Pascal-case const name is illegal"

skill demo()
    description: "Carrier."
    flow:
        return <"x">
